# popgames

./: .buildinfo  .coveragerc  .gitignore  README.md  Taskfile.yaml  alarm_clock.html  genindex.html  index.html  objects.inv  payoff_mechanism.html  population_game.html  py-modindex.html  pyproject.toml  revision_protocol.html  search.html  searchindex.js  simulator.html
.github/workflows/: ci.yml  deploy-docs.yml  publish.yml
_modules/: index.html
_modules/popgames/: alarm_clock.html  payoff_mechanism.html  population_game.html  revision_process.html  revision_protocol.html  simulator.html
_sources/: alarm_clock.rst.txt  index.rst.txt  payoff_mechanism.rst.txt  simulator.rst.txt
_sources/contributing/: index.md.txt
_sources/getting_started/: index.md.txt  installation.md.txt  quick_example.md.txt
_sources/key_concepts/: index.md.txt
_sources/revision_process/: alarm_clock.rst.txt
_static/: custom.css  documentation_options.js
api/: index.html  payoff_mechanism.html  population_game.html  simulator.html
api/revision_process/: alarm_clock.html  index.html  revision_protocol.html
contributing/: index.html
docs/examples/: prisoners_dilemma.py
docs/source/: alarm_clock.rst  conf.py  index.md  index.rst  payoff_mechanism.rst  population_game.rst  revision_protocol.rst
getting_started/: index.html  installation.html  quick_example.html
key_concepts/: index.html
popgames/: __init__.py  alarm_clock.py  payoff_mechanism.py  population_game.py  revision_process.py  revision_protocol.py  simulator.py
popgames/plotting/: _plot_config.py  plotters.py  visualization_mixin.py
popgames/utilities/: gnep_solvers.py  input_validators.py  plotters.py
revision_process/: alarm_clock.html  index.html  revision_protocol.html
scripts/: generate_readme.py
src/popgames/: __init__.py  alarm_clock.py  payoff_mechanism.py  population_game.py  revision_process.py  revision_protocol.py  simulator.py
tests/: helpers.py  test_alarm_clock.py  test_book_examples.py  test_docs_examples.py  test_payoff_mechanism.py  test_population_game.py  test_revision_process.py  test_revision_protocol.py  test_simulator.py
usage_examples/: index.html  prisoners_dilemma.html  prisoners_dilemma_example.html
(+21 files in other folders)
