[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "popgames"
version = "0.1.0"
description = "A Python package to simulate population games and evolutionary dynamics"
authors = [
    {name = "Juan Martinez-Piazuelo",email = "juan@martinezpiazuelo.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cvxpy>=1.7.5",
    "matplotlib>=3.10.8",
    "numpy>=1.26",
    "python-ternary>=1.0.8",
    "scipy>=1.16.3",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
docs = [
    "furo>=2025.12.19",
    "ghp-import>=2.1.0",
    "sphinx>=9.0.4",
]

[tool.uv]
default-groups = ["dev", "docs"]
