[build-system]
requires = ["hatchling>=1.25", "hatch-vcs>=0.5"]
build-backend = "hatchling.build"

[project]
name = "popgames"
dynamic = ["version"]
description = "A Python package to simulate population games and evolutionary dynamics"
authors = [
    { name = "Juan Martinez-Piazuelo", email = "juan@martinezpiazuelo.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
    "cvxpy>=1.7.5",
    "matplotlib>=3.10.8",
    "numpy>=1.26",
    "python-ternary>=1.0.8",
    "scipy>=1.16.3",
]

[dependency-groups]
dev = [
    "coverage>=7.13.1",
    "go-task-bin>=3.46.4",
    "ruff>=0.14.10",
]
docs = [
    "furo>=2025.12.19",
    "ghp-import>=2.1.0",
    "myst-parser>=5.0.0",
    "sphinx>=9.0.4",
    "sphinx-autodoc-typehints>=3.6.1",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.7.0",
]

[tool.uv]
default-groups = ["dev", "docs"]

[tool.ruff.lint.per-file-ignores]
"tests/test_book_examples.py" = ["E731", "F841"]

# --- Dynamic version from git tags (vX.Y.Z -> X.Y.Z) ---
[tool.hatch.version]
source = "vcs"

[tool.hatch.version.vcs]
tag-pattern = "^v(?P<version>.*)$"

# --- Build config ---
[tool.hatch.build.targets.wheel]
packages = ["src/popgames"]

[tool.hatch.build.targets.sdist]
include = [
    "src/popgames",
    "README.md",
    "pyproject.toml",
    "LICENSE*",
]
